--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build:ui": "rm -rf dist && cd ../part2 && npm run build && cp -r dist ../part3",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
-    "test": "node --test"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test node --test",
+    "build:ui": "rm -rf dist && cd ../part2 && npm run build && cp -r dist ../part4",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "author": "Jandreu",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "mongoose": "^8.6.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0"
   }
 }
